--- a/css/style.css
+++ b/css/style.css
@@ -483,3 +483,39 @@ p {
 .footer-social-icons-item-image {
     fill: #f4f4fd;
 }
+
+
+/**************************************************/
+.modal-overlay {
+    background-color: rgba(0, 0, 0, 0.5);
+  
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 250ms ease-in-out;
+  }
+  
+  .modal-overlay.is-open {
+    opacity: 1;
+    pointer-events: auto;
+  }
+  
+  .modal {
+    background-color: #fff;
+    border-radius: 4px;
+    padding: 16px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    max-width: 480px;
+    max-height: 80%;
+    overflow-y: auto;
+  }
+  
