--- a/css/style.css
+++ b/css/style.css
@@ -455,6 +455,7 @@ p {
 .footer-social-icons-list {
     display: flex;
     gap: 16px;
+    margin-right: 160px;
 }
 
 .footer-social-icons-item {
@@ -546,7 +547,7 @@ p {
 
 /**************************************************/
 .modal-overlay {
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(46, 47, 66, 0.4);
 
     position: fixed;
     top: 0;
@@ -560,7 +561,8 @@ p {
 
     opacity: 0;
     pointer-events: none;
-    transition: opacity 250ms ease-in-out;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    visibility: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-overlay.is-open {
@@ -571,9 +573,64 @@ p {
 .modal {
     background-color: #fff;
     border-radius: 4px;
-    padding: 16px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     max-width: 480px;
     max-height: 80%;
     overflow-y: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 408px;
+    min-height: 584px;
+    background: #fcfcfc;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14),
+        0px 1px 3px rgba(0, 0, 0, 0.12),
+        0px 2px 1px rgba(0, 0, 0, 0.2);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding: 72px 24px 24px 24px;
+}
+
+.feedback-button-close {
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #e7e9fc;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 0;
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.feedback-button-close:hover {
+    border: none;
+    fill: #ffffff;
+}
+
+.feedback-button-close:focus {
+    background-color: #404bbf;
+    border: none;
+    fill: #ffffff;
+}
+
+.feedback-button-close-icon {
+    fill: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.feedback-title {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: #2E2F42;
+    margin-bottom: 16px;
 }
