--- a/css/style.css
+++ b/css/style.css
@@ -561,8 +561,9 @@ p {
 
     opacity: 0;
     pointer-events: none;
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
     visibility: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-overlay.is-open {
@@ -613,6 +614,7 @@ p {
 .feedback-button-close:hover {
     border: none;
     fill: #ffffff;
+    background-color: #404bbf;
 }
 
 .feedback-button-close:focus {
@@ -623,6 +625,7 @@ p {
 
 .feedback-button-close-icon {
     fill: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .feedback-title {
@@ -633,4 +636,17 @@ p {
     letter-spacing: 0.02em;
     color: #2E2F42;
     margin-bottom: 16px;
+}
+
+.feedback-form-item-container {
+    margin-bottom: 8px;
+}
+
+.feedback-form-item-label {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+    display: block;
+    margin-bottom: 4px;
 }
