--- a/css/style.css
+++ b/css/style.css
@@ -664,7 +664,7 @@ p {
     padding-left: 38px;
     outline: transparent;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    border-color: #4D5AE5;
+    border: 1px solid rgba(46, 47, 66, 0.4);
 }
 
 .feedback-form-item-icon {
@@ -679,9 +679,58 @@ p {
     fill: #4D5AE5;
 }
 
+.feedback-form-comment-container {
+    margin-bottom: 16px;
+}
 
+.feedback-form-comment {
+    width: 100%;
+    height: 120px;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    background-color: transparent;
+    padding: 8px 16px;
+    outline: transparent;
+    resize: none;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
+.feedback-form-comment:focus {
+    border-color: #4D5AE5;
+}
 
+.feedback-form-user-privacy-container {
+    margin-bottom: 24px;
+}
+
+.feedback-form-user-privacy {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+}
+
+.feedback-form-user-privacy-span {
+    width: 16px;
+    height: 16px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 2px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    fill: transparent;
+}
+
+.feedback-form-user-privacy-link {
+    color: #4d5ae5;
+}
 
 .feedback-form-submit {
     display: block;
