--- a/css/style.css
+++ b/css/style.css
@@ -664,7 +664,6 @@ p {
     padding-left: 38px;
     outline: transparent;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    border: 1px solid rgba(46, 47, 66, 0.4);
 }
 
 .feedback-form-item-icon {
@@ -673,6 +672,10 @@ p {
     top: 50%;
     transform: translateY(-50%);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.feedback-form-item-input:focus {
+    border-color: #4D5AE5;
 }
 
 .feedback-form-item-input:focus+.feedback-form-item-icon {
@@ -728,8 +731,14 @@ p {
     fill: transparent;
 }
 
+.feedback-form-user-privacy-span.checked {
+    border: none;
+    fill: #F4F4FD;
+}
+
 .feedback-form-user-privacy-link {
     color: #4d5ae5;
+    text-decoration: underline;
 }
 
 .feedback-form-submit {
@@ -746,4 +755,6 @@ p {
     background-color: #4D5AE5;
     border: none;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border-radius: 4px;
+    margin: 0 auto;
 }
