--- a/css/style.css
+++ b/css/style.css
@@ -575,7 +575,7 @@ p {
     background-color: #fff;
     border-radius: 4px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    min-width: 480px;
+    max-width: 480px;
     max-height: 80%;
     overflow-y: auto;
     position: absolute;
