--- a/css/style.css
+++ b/css/style.css
@@ -440,6 +440,7 @@ p {
     line-height: 1.5;
     color: #F4F4FD;
     letter-spacing: 0.02em;
+    width: 264px;
 }
 
 
@@ -576,7 +577,6 @@ p {
     border-radius: 4px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     max-width: 480px;
-    max-height: 80%;
     overflow-y: auto;
     position: absolute;
     top: 50%;
